--- a/business-logistic.html
+++ b/business-logistic.html
@@ -21,7 +21,7 @@
             <img class="img-fluid logo" src="images/ansaf-logo.png" alt="">
           </a>
         </div>
-        <div class="col-lg-8 menu-wrap ml-lg-5">
+        <div class="col-lg-8 menu-wrap ml-lg-5 d-none d-lg-block">
           <ul>
             <li>
               <a href="about.html">
@@ -72,7 +72,7 @@
             </li> 
           </ul>
         </div>
-        <div class="col-lg-1 lang-ansaf">
+        <div class="col-lg-1 lang-ansaf d-none d-lg-block">
           <div class="divider"></div>
           <ul>
             <li>
@@ -86,20 +86,20 @@
 </div>
     <div class="container-fluid busl-top">
       <div class="row">
-        <div class="col-lg-12 pl-lg-0">
+        <div class="col-lg-12 pl-0">
           <img class="elements" src="images/segitiga-biru-kanan-04.png" alt="">
           <div class="content-wrapper d-flex">
             <div class="inline-block">
-                <img class="w-auto mt-lg-5" src="images/line-gray-11.png" alt="">
+                <img class="mt-5" src="images/line-gray-11.png" alt="">
             </div>
-            <div class="inline-block pl-lg-4">
+            <div class="inline-block pl-lg-4 pl-2">
                 <h6 class="text-orange">
                   OUR BUSINESSES
                 </h6>
                 <h2 class="text-dark-blue mb-lg-4">
                   Ansaf Logistic
                 </h2>
-                <a href="businesses.html" class="mt-lg-5 d-inline-block">
+                <a href="businesses.html" class="mt-lg-5 d-none d-lg-inline-block">
                   <i class="fas fa-chevron-left text-orange"></i> kembali ke halaman sebelumnya
                 </a>
             </div>
@@ -110,38 +110,60 @@
     <div class="container-fluid busl-mid position-relative">
       <img class="tractor-logistic move-right" src="images/business-logistic-tractors-02.png" alt="">
       <div class="row first-section">
-        <div class="col-lg-6 offset-lg-6">
-          <h6 class="text-orange mb-lg-1">
-            TENTANG BISNIS INI
-          </h6>
-          <h3 class="text-white mb-lg-4">
-            Support Coal Barging
-          </h3>
-          <p class="text-white">
-            Sejak tahun 2018, PT Ansaf Inti Resources berupaya melakukan diversifikasi<br>
-            usaha dengan menjajaki usaha dibidang support logistik bagi kegiatan coal<br>
-            barging. Saat ini terdapat 2 perusahaan yang bergerak dibidang support coal<br>
-            barging, yaitu PT Palaran Sinergi Mas di Kecamatan Palaran Kota Samarinda<br>
-            dan PT Embalut Sinergimas Persada di Desa Embalut, Kecamatan Tenggarong<br>
-            Seberang Kabupaten Kutai Kartanegara. Saat ini pengapalan batubara dari<br>
-            kedua perusahaan tersebut telah melayani pengapalan baik tujuan domestic<br>
-            maupun ekspor. 
-          </p>
+        <div class="col-lg-6 offset-lg-6 pl-lg-3 pl-0">
+          <div class="content-wrapper d-flex">
+            <div class="inline-block d-lg-none">
+              <img class="mt-5" src="images/line-gray-11.png" alt="">
+            </div>
+            <div class="inline-block pl-lg-0 pl-2">
+              <h6 class="text-orange mb-lg-1">
+                TENTANG BISNIS INI
+              </h6>
+              <h3 class="text-white mb-4">
+                Support Coal Barging
+              </h3>
+              <p class="text-white d-none d-lg-block">
+                Sejak tahun 2018, PT Ansaf Inti Resources berupaya melakukan diversifikasi<br>
+                usaha dengan menjajaki usaha dibidang support logistik bagi kegiatan coal<br>
+                barging. Saat ini terdapat 2 perusahaan yang bergerak dibidang support coal<br>
+                barging, yaitu PT Palaran Sinergi Mas di Kecamatan Palaran Kota Samarinda<br>
+                dan PT Embalut Sinergimas Persada di Desa Embalut, Kecamatan Tenggarong<br>
+                Seberang Kabupaten Kutai Kartanegara. Saat ini pengapalan batubara dari<br>
+                kedua perusahaan tersebut telah melayani pengapalan baik tujuan domestic<br>
+                maupun ekspor. 
+              </p>
+              <p class="text-white d-lg-none">
+                Sejak tahun 2018, PT Ansaf Inti Resources<br>
+                berupaya melakukan diversifikasi usaha dengan<br>
+                menjajaki usaha dibidang support logistik bagi<br>
+                kegiatan coal barging. Saat ini terdapat 2<br>
+                perusahaan yang bergerak dibidang support<br>
+                coal barging, yaitu PT Palaran Sinergi Mas di<br>
+                Kecamatan Palaran Kota Samarinda dan PT<br>
+                Embalut Sinergimas Persada di Desa Embalut,<br>
+                Kecamatan Tenggarong Seberang Kabupaten<br>
+                Kutai Kartanegara. Saat ini pengapalan<br>
+                batubara dari kedua perusahaan tersebut telah<br>
+                melayani pengapalan baik tujuan domestic<br>
+                maupun ekspor.
+              </p>
+            </div>
+          </div>
         </div>
       </div>
     </div>
     <div class="container-fluid detail-logistic">
       <div class="row first-section">
-        <div class="col-lg-5 ml-lg-5 py-lg-5">
+        <div class="col-lg-5 ml-lg-5 py-lg-5 order-2 order-lg-1 pl-lg-3 pl-0">
           <div class="content-wrapper pt-lg-5 d-flex">
             <div class="inline-block">
-                <img class="w-auto" src="images/line-gray-11.png" alt="">
+                <img class="mt-lg-0 mt-5" src="images/line-gray-11.png" alt="">
             </div>
-            <div class="inline-block pl-lg-4">
+            <div class="inline-block pl-lg-4 pl-2">
                 <h6 class="text-orange  mb-lg-2 mt-lg-1">
                   SAMARINDA
                 </h6>
-                <h3 class="text-gray">
+                <h3 class="text-gray mb-lg-3 mb-4">
                   PT Palaran Sinergi Mas
                 </h3>
                 <p class="text-gray font-roboto my-lg-3">
@@ -150,7 +172,8 @@
                   <strong>Tujuan Pengapalan:</strong> Domestik dan Ekspor<br>
                 </p>
                 <p class="text-gray font-roboto">
-                  <strong>SERVICES</strong>
+                  <strong>SERVICES</strong><br>
+                  <br>
                       Under the supervision of expert, PT PSM provides the<br>
                       best service according to the needs of coutomers, from<br>
                       hauling, crushing and treatment<br>
@@ -158,32 +181,53 @@
             </div>
           </div>
         </div>
-        <div class="col-lg-6">
-          <img class="img-fluid" src="images/businesses-logistic-content-images-02.png" alt="">
+        <div class="col-lg-6 order-1 order-lg-2">
+          <img class="img-fluid d-none d-lg-block" src="images/businesses-logistic-content-images-02.png" alt="">
+          <img class="img-fluid d-lg-none p-4" src="images/businesses-logistic-content-images-mobile-04.jpg" alt="">
         </div>
       </div>
       <div class="row second-section">
-        <div class="col-lg-5 offset-lg-6 py-lg-5">
+        <div class="col-lg-12 d-lg-none">
+          <img class="img-fluid d-lg-none p-4 mb-4" src="images/businesses-logistic-content-images-mobile-04.jpg" alt="">
+        </div>
+        <div class="col-lg-5 py-lg-5 pl-lg-3 pl-0">
           <div class="content-wrapper d-flex">
             <div class="inline-block">
-                <img class="w-auto" src="images/line-gray-11.png" alt="">
+                <img class="mt-lg-0 mt-5" src="images/line-gray-11.png" alt="">
             </div>
-            <div class="inline-block pl-lg-4">
+            <div class="inline-block pl-lg-4 pl-2">
                 <h6 class="text-orange  mb-lg-2 mt-lg-1">
                   KUTAI KERTANEGARA
                 </h6>
-                <h3 class="text-gray">
+                <h3 class="text-gray d-none d-lg-block">
                   PT Embalut<br>
                   Sinergimas Persada
                 </h3>
-                <p class="text-gray font-roboto my-lg-3">
+                <h3 class="text-white mb-4 d-lg-none">
+                  PT Embalut<br>
+                  Sinergimas Persada
+                </h3>
+                <p class="text-gray font-roboto my-lg-3 d-none d-lg-block">
                   <strong>Lokasi:</strong> Desa Embalut, Kecamatan Tenggarong<br>
                   Seberang, Kabupaten Kutai Kertanegara<br>
                   <strong>Kapasitas</strong>: 7500 MT / hari<br>
                   <strong>Tujuan Pengapalan:</strong> Domestik dan Ekspor<br>
                 </p>
-                <p class="text-gray font-roboto">
+                <p class="text-white font-roboto my-lg-3 d-lg-none">
+                  <strong>Lokasi:</strong> Desa Embalut, Kecamatan Tenggarong<br>
+                  Seberang, Kabupaten Kutai Kertanegara<br>
+                  <strong>Kapasitas</strong>: 7500 MT / hari<br>
+                  <strong>Tujuan Pengapalan:</strong> Domestik dan Ekspor<br>
+                </p>
+                <p class="text-gray font-roboto d-none d-lg-block">
                   <strong>SERVICES</strong>
+                  The dock accept coal barges with sizes from 270 to<br>
+                  300 feet, currently is used by one of the mining<br>
+                  companies under PT Ansaf subsidiaries,<br>
+                  PT Latahzan.
+                </p>
+                <p class="text-white font-roboto d-lg-none"><br>
+                  <strong>SERVICES</strong><br><br>
                   The dock accept coal barges with sizes from 270 to<br>
                   300 feet, currently is used by one of the mining<br>
                   companies under PT Ansaf subsidiaries,<br>
@@ -197,8 +241,11 @@
     <div class="container-fluid footer-content">
       <div class="row text-center">
           <div class="col-lg-12">
-              <h4 class="text-dark-blue pb-lg-4">
+              <h4 class="text-dark-blue pb-lg-4 d-none d-lg-block">
                 Bisnis Kami Lainnya
+              </h4>
+              <h4 class="text-dark-blue pb-5 d-lg-none">
+                Bisnis Kami<br>Lainnya
               </h4>
           </div>
       </div>
@@ -221,27 +268,27 @@
           </div>
       </div>
   </div>
-  <div class="container-fluid footer-details mb-lg-5">
+  <div class="container-fluid footer-details mb-5">
     <div class="row">
       <div class="col-lg-2">
           <img class="img-fluid text-right logo" src="images/ansaf-logo.png" alt="">
       </div>
-      <div class="col-lg-4">
+      <div class="col-lg-4 py-lg-0 py-4">
           <p class="text-gray">
               Kantor Taman E3.3 Unit B5 Jl Dr Ide Anak<br>
               Agung Gede Agung Lot 8.6-8.7 Kawasan Mega<br>
-              KuninganJakarta 12950
+              Kuningan Jakarta 12950
           </p>
       </div>
       <div class="col-lg-3 fax-column text-center">
           <a href="#" class="link-orange-border">
              <span class="text-orange"><i class="fab fa-whatsapp text-orange"></i> (0541) 260 226</span> 
           </a>
-          <p class="text-gray mt-lg-3">
+          <p class="text-gray mt-lg-3 mt-2 fax-details">
               Fax (0541) 261 532
           </p>
       </div>
-      <div class="col-lg-2 pl-lg-0 offset-lg-1">
+      <div class="col-lg-2 link-socmed pl-lg-0 offset-lg-1 pt-lg-0 pt-5">
           <a href="#" class="text-gray d-block">
               <i class="fab fa-facebook-square"></i> Ansaf Indonesia
           </a>
@@ -253,16 +300,16 @@
           </a>
       </div>
   </div>
-  </div>
-  <div class="container-fluid footer bg-dark-blue">
-      <div class="row">
-          <div class="col-lg-12">
-              <p class="text-white mt-lg-3 text-center">
-                  Copyright © 2020 PT Ansaf Inti Resources
-              </p>
-          </div>
-      </div>
-  </div>
+</div>
+<div class="container-fluid footer bg-dark-blue">
+    <div class="row">
+        <div class="col-lg-12">
+            <p class="text-white mt-3 text-center">
+                Copyright © 2020 PT Ansaf Inti Resources
+            </p>
+        </div>
+    </div>
+</div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js" integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg==" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
