--- a/csr.html
+++ b/csr.html
@@ -21,7 +21,7 @@
             <img class="img-fluid logo" src="images/ansaf-logo.png" alt="">
           </a>
         </div>
-        <div class="col-lg-8 menu-wrap ml-lg-5">
+        <div class="col-lg-8 menu-wrap ml-lg-5 d-none d-lg-block">
           <ul>
             <li>
               <a href="about.html">
@@ -72,7 +72,7 @@
             </li> 
           </ul>
         </div>
-        <div class="col-lg-1 lang-ansaf">
+        <div class="col-lg-1 lang-ansaf d-none d-lg-block">
           <div class="divider"></div>
           <ul>
             <li>
@@ -86,13 +86,13 @@
 </div>
     <div class="container-fluid csr-top">
       <div class="row">
-        <div class="col-lg-12 pl-lg-0">
+        <div class="col-lg-12 pl-0">
           <img class="elements" src="images/segitiga-biru-kanan-04.png" alt="">
           <div class="content-wrapper d-flex">
             <div class="inline-block">
-                <img class="w-auto mt-lg-3" src="images/line-gray-11.png" alt="">
+                <img class="mt-3" src="images/line-gray-11.png" alt="">
             </div>
-            <div class="inline-block pl-lg-4">
+            <div class="inline-block pl-lg-4 pl-2">
                 <h2 class="text-dark-blue">
                   CSR Program
                 </h2>
@@ -103,8 +103,9 @@
     </div> 
     <div class="container-fluid csr-mid bg-dark-blue">
       <div class="row">
-        <div class="col-lg-12 px-lg-0">
-          <img class="content-mid" src="images/csr-mid-first-section-07.png" alt="">
+        <div class="col-lg-12 px-0">
+          <img class="content-mid d-none d-lg-block" src="images/csr-mid-first-section-07.png" alt="">
+          <img class="content-mid d-lg-none" src="images/csr-mid-first-section-mobile-07.jpg" alt="">
           <div class="content-wrapper d-flex">
             <div class="inline-block pl-lg-5 offset-lg-1">
                 <h2 class="text-white mb-lg-4">
