--- a/projects.html
+++ b/projects.html
@@ -21,7 +21,7 @@
             <img class="img-fluid logo" src="images/ansaf-logo.png" alt="">
           </a>
         </div>
-        <div class="col-lg-8 menu-wrap ml-lg-5">
+        <div class="col-lg-8 menu-wrap ml-lg-5 d-none d-lg-block">
           <ul>
             <li>
               <a href="about.html">
@@ -72,7 +72,7 @@
             </li> 
           </ul>
         </div>
-        <div class="col-lg-1 lang-ansaf">
+        <div class="col-lg-1 lang-ansaf d-none d-lg-block">
           <div class="divider"></div>
           <ul>
             <li>
@@ -86,13 +86,13 @@
 </div>
     <div class="container-fluid bus-top">
       <div class="row">
-        <div class="col-lg-12 pl-lg-0">
+        <div class="col-lg-12 pl-0">
           <img class="elements" src="images/segitiga-biru-kanan-04.png" alt="">
           <div class="content-wrapper d-flex">
             <div class="inline-block">
-                <img class="w-auto mt-lg-3" src="images/line-gray-11.png" alt="">
+                <img class="mt-3" src="images/line-gray-11.png" alt="">
             </div>
-            <div class="inline-block pl-lg-4">
+            <div class="inline-block pl-lg-4 pl-2">
                 <h2 class="text-dark-blue">
                   Our Projects
                 </h2>
@@ -104,60 +104,96 @@
     <div class="container-fluid proj-mid position-relative overflow-hidden">
       <img class="projects-tractor move-left" src="images/projects-tractor-02.png" alt="">
       <div class="row first-section">
-        <div class="col-lg-5 offset-lg-2 details">
-          <h3 class="text-white my-lg-4">
+        <div class="col-lg-5 offset-lg-2 details order-lg-1 order-2">
+          <h3 class="text-white my-lg-4 d-none d-lg-block">
             PT Ansaf Inti Resources
           </h3>
-          <p class="text-white">
+          <h3 class="text-white my-3 d-lg-none">
+            PT Ansaf<br>
+            Inti Resources
+          </h3>
+          <p class="text-white d-none d-lg-block">
             PT Ansaf Inti Resources (AIR) merupakan perusahaan yang bergerak dibidang<br>
             pertambangan yang beroperasi di provinsi Kalimantan Timur. Perusahaan<br>
             yang berdiri pada 22 juli 2011 memulai usahanya sebagai perusahaan yang<br>
             bergerak di coal trading company. Pada tahun 2014 PT Ansaf Inti Resources<br>
             memulai usaha lain sebagai perusahaan jasa pertambangan.
           </p>
+          <p class="text-white d-lg-none">
+            PT Ansaf Inti Resources (AIR) merupakan<br>
+            perusahaan yang bergerak dibidang<br>
+            pertambangan yang beroperasi di provinsi<br>
+            Kalimantan Timur. Perusahaan yang berdiri<br>
+            pada 22 juli 2011 memulai usahanya sebagai<br>
+            perusahaan yang bergerak di coal trading<br>
+            company. Pada tahun 2014 PT Ansaf Inti<br>
+            Resources memulai usaha lain sebagai<br>
+            perusahaan jasa pertambangan.
+          </p>
         </div>
-        <div class="col-lg-5 pr-lg-0">
-          <img class="img-fluid" src="images/projects-second-section-content-02.png" alt="">
+        <div class="col-lg-5 pr-lg-0 order-lg-2 order-1 px-0">
+          <img class="img-fluid d-none d-lg-block" src="images/projects-second-section-content-02.png" alt="">
+          <img class="img-fluid d-lg-none" src="images/projects-second-section-content-mobile-02.png" alt="">
         </div>
       </div>
-      <div class="row second-section text-center">
-        <div class="col-lg-12">
-          <h6 class="text-orange">
-            Proyek-Proyek Kami
-          </h6>
-          <h3 class="text-white">
-            Solution through partnership
-          </h3>
-          <p class="text-white my-lg-5">
-            PT Ansaf Inti Resources (AIR) berkomitmen untuk memberikan solusi dan<br>
-            memiliki kolaborasi jangka panjang dengan klien. Kemampuan dan komitmen<br>
-            ini terus kami pegang dalam setiap proyek kami.
-          </p>
-          <a class="button-link text-white" href="prev-projects.html">
-            PREVIOUS PROJECTS
-          </a>
-          <a class="button-link middle-button text-white" href="existing-projects.html">
-            EXISTING PROJECTS
-          </a>
-          <a class="button-link text-white" href="prospective-projects.html">
-            PROSPECTIVE PROJECTS
-          </a>
+      <div class="row second-section">
+        <div class="col-lg-12 pl-lg-3 pl-0">
+          <div class="content-wrapper d-flex">
+            <div class="inline-block d-lg-none">
+              <img class="mt-5" src="images/line-gray-11.png" alt="">
+            </div>
+            <div class="inline-block pl-lg-0 pl-2">
+              <h6 class="text-orange">
+                Proyek-Proyek Kami
+              </h6>
+              <h3 class="text-white">
+                Solution through partnership
+              </h3>
+              <p class="text-white my-lg-5 mt-3 mb-5">
+                PT Ansaf Inti Resources (AIR) berkomitmen untuk memberikan solusi dan<br>
+                memiliki kolaborasi jangka panjang dengan klien. Kemampuan dan komitmen<br>
+                ini terus kami pegang dalam setiap proyek kami.
+              </p>
+              <a class="button-link text-white d-none d-lg-inline" href="prev-projects.html">
+                PREVIOUS PROJECTS
+              </a>
+              <a class="button-link middle-button text-white d-none d-lg-inline" href="existing-projects.html">
+                EXISTING PROJECTS
+              </a>
+              <a class="button-link text-white d-none d-lg-inline" href="prospective-projects.html">
+                PROSPECTIVE PROJECTS
+              </a>
+              <a class="button-link link-white-border my-4 text-center text-white d-lg-none d-block" href="prev-projects.html">
+                PREVIOUS PROJECTS
+              </a>
+              <a class="button-link link-white-border my-4 text-center text-white d-lg-none d-block" href="existing-projects.html">
+                EXISTING PROJECTS
+              </a>
+              <a class="button-link link-white-border my-4 text-center text-white d-lg-none d-block" href="prospective-projects.html">
+                PROSPECTIVE PROJECTS
+              </a>
+            </div>
+          </div>
         </div>
       </div>
     </div>
     <div class="container-fluid footer-content">
       <div class="row text-center">
           <div class="col-lg-12">
-              <h4 class="text-dark-blue pb-lg-4">
+              <h4 class="text-dark-blue pb-lg-4 d-none d-lg-block">
                 Masih ada pertanyaan?
+              </h4>
+              <h4 class="text-dark-blue pb-5 d-lg-none">
+                Masih ada<br>
+                pertanyaan?
               </h4>
           </div>
       </div>
       <div class="row">
           <div class="container">
-              <div class="row text-center">
-                  <div class="col-lg-12">
-                    <a href="contact.html" class="link-orange-border mx-lg-4">
+              <div class="row text-center mb-lg-0 mb-5">
+                  <div class="col-lg-12 pb-lg-0 pb-5">
+                    <a href="contact.html" class="link-orange-border mx-lg-4 mb-5 mb-lg-0">
                       <span class="text-orange">
                         HUBUNGI KAMI
                       </span> 
@@ -167,27 +203,27 @@
           </div>
       </div>
   </div>
-  <div class="container-fluid footer-details mb-lg-5">
+  <div class="container-fluid footer-details mb-5">
     <div class="row">
       <div class="col-lg-2">
           <img class="img-fluid text-right logo" src="images/ansaf-logo.png" alt="">
       </div>
-      <div class="col-lg-4">
+      <div class="col-lg-4 py-lg-0 py-4">
           <p class="text-gray">
               Kantor Taman E3.3 Unit B5 Jl Dr Ide Anak<br>
               Agung Gede Agung Lot 8.6-8.7 Kawasan Mega<br>
-              KuninganJakarta 12950
+              Kuningan Jakarta 12950
           </p>
       </div>
       <div class="col-lg-3 fax-column text-center">
           <a href="#" class="link-orange-border">
              <span class="text-orange"><i class="fab fa-whatsapp text-orange"></i> (0541) 260 226</span> 
           </a>
-          <p class="text-gray mt-lg-3">
+          <p class="text-gray mt-lg-3 mt-2 fax-details">
               Fax (0541) 261 532
           </p>
       </div>
-      <div class="col-lg-2 pl-lg-0 offset-lg-1">
+      <div class="col-lg-2 link-socmed pl-lg-0 offset-lg-1 pt-lg-0 pt-5">
           <a href="#" class="text-gray d-block">
               <i class="fab fa-facebook-square"></i> Ansaf Indonesia
           </a>
@@ -199,16 +235,16 @@
           </a>
       </div>
   </div>
-  </div>
-  <div class="container-fluid footer bg-dark-blue">
-      <div class="row">
-          <div class="col-lg-12">
-              <p class="text-white mt-lg-3 text-center">
-                  Copyright © 2020 PT Ansaf Inti Resources
-              </p>
-          </div>
-      </div>
-  </div>
+</div>
+<div class="container-fluid footer bg-dark-blue">
+    <div class="row">
+        <div class="col-lg-12">
+            <p class="text-white mt-3 text-center">
+                Copyright © 2020 PT Ansaf Inti Resources
+            </p>
+        </div>
+    </div>
+</div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js" integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg==" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
