--- a/prospective-projects.html
+++ b/prospective-projects.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css" integrity="sha512-sMXtMNL1zRzolHYKEujM2AqCLUR9F2C4/05cdbxjjLSRvMQIciEPCQZo++nk7go3BtSuK9kfa/s+a4f4i5pLkw==" crossorigin="anonymous" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <link rel="stylesheet" href="css/style.css">
-    <title>Existing Projects | Ansaf</title>
+    <title>Prospective Projects | Ansaf</title>
 </head>
 <body>
   <div class="container-fluid navbar-ansaf">
@@ -21,7 +21,7 @@
             <img class="img-fluid logo" src="images/ansaf-logo.png" alt="">
           </a>
         </div>
-        <div class="col-lg-8 menu-wrap ml-lg-5">
+        <div class="col-lg-8 menu-wrap ml-lg-5 d-none d-lg-block">
           <ul>
             <li>
               <a href="about.html">
@@ -72,7 +72,7 @@
             </li> 
           </ul>
         </div>
-        <div class="col-lg-1 lang-ansaf">
+        <div class="col-lg-1 lang-ansaf d-none d-lg-block">
           <div class="divider"></div>
           <ul>
             <li>
@@ -84,22 +84,26 @@
         </div>
     </div>
 </div>
-    <div class="container-fluid prevp-top">
+    <div class="container-fluid prevp-top mobile-pros">
       <div class="row">
-        <div class="col-lg-12 pl-lg-0">
+        <div class="col-lg-12 pl-lg-0 pl-0">
           <img class="elements" src="images/segitiga-biru-kanan-04.png" alt="">
           <div class="content-wrapper d-flex">
             <div class="inline-block">
-                <img class="w-auto mt-lg-5" src="images/line-gray-11.png" alt="">
+                <img class="mt-lg-5" src="images/line-gray-11.png" alt="">
             </div>
-            <div class="inline-block pl-lg-4">
+            <div class="inline-block pl-lg-4 pl-2">
                 <h6 class="text-orange">
                   OUR PROJECTS
                 </h6>
-                <h2 class="text-dark-blue mb-lg-4">
+                <h2 class="text-dark-blue mb-lg-4 d-none d-lg-block">
                   Prospective Projects
                 </h2>
-                <a href="projects.html" class="mt-lg-5 d-inline-block">
+                <h2 class="text-dark-blue d-lg-none">
+                  Prospective<br>
+                  Projects
+                </h2>
+                <a href="projects.html" class="mt-lg-5 d-none d-lg-inline-block">
                   <i class="fas fa-chevron-left text-orange"></i> kembali ke halaman sebelumnya
                 </a>
             </div>
@@ -109,7 +113,7 @@
     </div> 
     <div class="container-fluid prevp-mid bg-dark-blue">
       <div class="row first-section">
-        <div class="col-lg-5 details">
+        <div class="col-lg-5 details order-lg-1 order-2">
           <h2 class="text-orange font-50">
             “
           </h2>
@@ -119,8 +123,9 @@
             pengembangan infrastruktur. 
           </p>
         </div>
-        <div class="col-lg-7 pr-lg-0">
-          <img class="img-content" src="images/prev-projects-mid-section-content-02.png" alt="">
+        <div class="col-lg-7 pr-lg-0 order-lg-2 order-1 px-0">
+          <img class="img-content d-none d-lg-block" src="images/prev-projects-mid-section-content-02.png" alt="">
+          <img class="img-content d-lg-none" src="images/prev-projects-mid-section-content-mobile-25.jpg" alt="">
         </div>
       </div>
     </div>
@@ -128,10 +133,10 @@
       <div class="row mb-lg-5">
         <div class="col-lg-12 pl-lg-0 pt-lg-5">
           <div class="content-wrapper d-flex">
-            <div class="inline-block">
+            <div class="inline-block d-none d-lg-inline-block">
                 <img class="w-auto mt-lg-2" src="images/line-gray-11.png" alt="">
             </div>
-            <div class="inline-block pl-lg-4">
+            <div class="inline-block pl-lg-4 d-none d-lg-inline-block">
                 <div class="d-flex">
                   <h2 class="text-dark-blue mr-lg-5">
                     Operational Areas
@@ -147,12 +152,69 @@
           </div>
         </div>
       </div>
-      <div class="row px-lg-4 mb-lg-5 pb-lg-5">
+      <div class="row px-lg-4 mb-lg-5 pb-lg-5 d-none d-lg-block">
         <div class="col-lg-12 px-lg-5">
           <img class="img-fluid px-lg-5" src="images/prospective-operational-areas-02.png" alt="">
         </div>
       </div>
-      <div class="row my-lg-5">
+      <div class="row d-lg-none mx-3">
+        <div class="col-lg-12 px-0">     
+          <div class="inline-block d-lg-none">
+            <h6 class="text-orange mb-3">
+              OPERATIONAL AREAS
+            </h6>
+            <h3 class="text-dark-blue">
+              Previous Projects
+            </h3>
+          </div>
+          <hr>
+        </div>
+        <div class="carousel-mobile-projects-list owl-theme">
+          <div class="item">
+            <div class="row pt-4">
+              <div class="col-3">
+                <i class="font-80 fas fa-circle text-orange"></i>
+              </div>
+              <div class="col-9 pl-4 pt-2 pb-5">
+                <h6 class="text-orange">
+                  Lorem Ipsum
+                </h6>
+                <h6>
+                  Lorem ipsum dolor sit<br>
+                  Consectetuer adipiscing
+                </h6>
+              </div>
+              <div class="col-lg-12">
+                <img class="mb-4" src="images/prospective-operational-areas-mobile-25.png" alt="">
+              </div>
+            </div>
+            <hr class="mt-4 mb-5">
+            <h6 class="text-right my-5">1/4</h6>
+          </div>
+          <div class="item">
+            <div class="row pt-4">
+              <div class="col-3">
+                <i class="font-80 fas fa-circle text-orange"></i>
+              </div>
+              <div class="col-9 pl-4 pt-2 pb-5">
+                <h6 class="text-orange">
+                  Lorem Ipsum
+                </h6>
+                <h6>
+                  Lorem ipsum dolor sit<br>
+                  Consectetuer adipiscing
+                </h6>
+              </div>
+              <div class="col-lg-12">
+                <img class="mb-4" src="images/prospective-operational-areas-mobile-25.png" alt="">
+              </div>
+            </div>
+            <hr class="mt-4 mb-5">
+            <h6 class="text-right my-5">2/4</h6>
+          </div>
+        </div>
+      </div>
+      <div class="row my-lg-5 d-none d-lg-flex">
         <div class="col-lg-12 pl-lg-0">
           <div class="content-wrapper d-flex">
             <div class="inline-block">
@@ -169,7 +231,7 @@
           </div>
         </div>
       </div>
-      <div class="row my-lg-5 mx-lg-5 font-roboto details">
+      <div class="row my-lg-5 mx-lg-5 font-roboto details d-none d-lg-flex">
         <div class="col-lg-6 px-lg-0">
           <div class="row mb-lg-4">
             <div class="col-lg-4">
@@ -396,6 +458,151 @@
                 </div>
               </div>
             </div>
+          </div>
+        </div>
+      </div>
+      <div class="row d-lg-none mx-3 my-5">
+        <div class="col-lg-12 px-0">     
+          <div class="inline-block d-lg-none">
+            <h6 class="text-orange mb-3">
+              OPERATIONAL AREAS
+            </h6>
+            <h3 class="text-dark-blue">
+              Previous Projects
+            </h3>
+          </div>
+          <hr>
+        </div>
+        <div class="carousel-mobile-projects-list owl-theme">
+          <div class="item">
+            <div class="row pt-4">
+              <div class="col-3">
+                <i class="font-80 fas fa-circle text-orange"></i>
+              </div>
+              <div class="col-9 pl-4 pt-2 pb-5">
+                <h6 class="text-orange">
+                  Lorem Ipsum
+                </h6>
+                <h6>
+                  Lorem ipsum dolor sit<br>
+                  Consectetuer adipiscing
+                </h6>
+              </div>
+              <div class="col-lg-12">
+                <img class="mb-4" src="images/prospective-operational-areas-mobile-25.png" alt="">
+              </div>
+            </div>
+            <hr class="mt-4 mb-5">
+            <h6 class="text-right my-5">1/4</h6>
+          </div>
+          <div class="item">
+            <div class="row pt-4">
+              <div class="col-3">
+                <i class="font-80 fas fa-circle text-orange"></i>
+              </div>
+              <div class="col-9 pl-4 pt-2 pb-5">
+                <h6 class="text-orange">
+                  Lorem Ipsum
+                </h6>
+                <h6>
+                  Lorem ipsum dolor sit<br>
+                  Consectetuer adipiscing
+                </h6>
+              </div>
+              <div class="col-lg-12">
+                <img class="mb-4" src="images/prospective-operational-areas-mobile-25.png" alt="">
+              </div>
+            </div>
+            <hr class="mt-4 mb-5">
+            <h6 class="text-right my-5">2/4</h6>
+          </div>
+        </div>
+      </div>
+      <div class="row d-lg-none">
+        <div class="col-lg-12 pl-lg-0 px-2">
+          <div class="content-wrapper d-flex">
+            <div class="inline-block d-none d-lg-inline-block">
+                <img class="mt-5" src="images/line-gray-11.png" alt="">
+            </div>
+            <div class="inline-block pl-lg-4 pl-4">
+                <h6 class="text-orange">
+                  LIST OF
+                </h6>
+                <h2 class="text-dark-blue">
+                  Prospective Projects
+                </h2>
+            </div>
+          </div>
+          <hr class="mx-4 d-lg-none">
+        </div>
+      </div>
+      <div class="row d-lg-none mb-5 mt-3 mx-3 font-roboto details">
+        <div class="carousel-mobile-projects-list owl-theme">
+          <div class="item">
+            <div class="col-lg-12 px-0">
+              <strong>
+                PT Insani Bara Perkasa (Rain Group Tbk)<br>
+                Tahun: 2016<br>
+              </strong>
+              <br>
+              <p>
+                Lokasi:<br>
+                Perangat, Kutai Kartanegara, East Kalimantan<br>
+                <br>
+                Lingkup Pekerjaan:<br>
+                Pertambangan Batubara - Peningkatan Jalan<br>
+                Pengangkutan Batubara<br>
+              </p>
+              <br>
+              <strong>
+                PT Multi Harapan Utama (Tbk)<br>
+                Tahun: 2016<br>
+              </strong>
+              <br>
+              <p>
+                Lokasi:<br>
+                Loa Kulu, Kutai Kartanegara, East Kalimantan<br>
+                <br>
+                Lingkup Pekerjaan:<br>
+                Pertambangan Batubara - Peningkatan Jalan<br>
+                Pengangkutan Batubara<br>
+              </p>
+            </div>
+            <hr class="d-lg-none mt-4 mb-5"> 
+            <h6 class="text-right my-5">1/4</h6>
+          </div>
+          <div class="item">
+            <div class="col-lg-12 px-0">
+              <strong>
+                PT Insani Bara Perkasa (Rain Group Tbk)<br>
+                Tahun: 2016<br>
+              </strong>
+              <br>
+              <p>
+                Lokasi:<br>
+                Perangat, Kutai Kartanegara, East Kalimantan<br>
+                <br>
+                Lingkup Pekerjaan:<br>
+                Pertambangan Batubara - Peningkatan Jalan<br>
+                Pengangkutan Batubara<br>
+              </p>
+              <br>
+              <strong>
+                PT Multi Harapan Utama (Tbk)<br>
+                Tahun: 2016<br>
+              </strong>
+              <br>
+              <p>
+                Lokasi:<br>
+                Loa Kulu, Kutai Kartanegara, East Kalimantan<br>
+                <br>
+                Lingkup Pekerjaan:<br>
+                Pertambangan Batubara - Peningkatan Jalan<br>
+                Pengangkutan Batubara<br>
+              </p>
+            </div>
+            <hr class="d-lg-none mt-4 mb-5"> 
+            <h6 class="text-right my-5">2/4</h6>
           </div>
         </div>
       </div>
@@ -403,15 +610,19 @@
     <div class="container-fluid footer-content">
       <div class="row text-center">
           <div class="col-lg-12">
-              <h4 class="text-dark-blue pb-lg-4">
+              <h4 class="text-dark-blue pb-lg-4 d-none d-lg-block">
                 Proyek Kami Lainnya
+              </h4>
+              <h4 class="text-dark-blue pb-5 d-lg-none">
+                Proyek Kami<br>
+                Lainnya
               </h4>
           </div>
       </div>
       <div class="row">
           <div class="container">
               <div class="row text-center">
-                  <div class="col-lg-12">
+                  <div class="col-lg-12 pb-5">
                     <a href="prev-projects.html" class="link-orange-border mx-lg-4">
                       <span class="text-orange">
                         PREVIOUS PROJECTS
@@ -427,27 +638,27 @@
           </div>
       </div>
   </div>
-  <div class="container-fluid footer-details mb-lg-5">
+  <div class="container-fluid footer-details mb-5">
     <div class="row">
       <div class="col-lg-2">
           <img class="img-fluid text-right logo" src="images/ansaf-logo.png" alt="">
       </div>
-      <div class="col-lg-4">
+      <div class="col-lg-4 py-lg-0 py-4">
           <p class="text-gray">
               Kantor Taman E3.3 Unit B5 Jl Dr Ide Anak<br>
               Agung Gede Agung Lot 8.6-8.7 Kawasan Mega<br>
-              KuninganJakarta 12950
+              Kuningan Jakarta 12950
           </p>
       </div>
       <div class="col-lg-3 fax-column text-center">
           <a href="#" class="link-orange-border">
              <span class="text-orange"><i class="fab fa-whatsapp text-orange"></i> (0541) 260 226</span> 
           </a>
-          <p class="text-gray mt-lg-3">
+          <p class="text-gray mt-lg-3 mt-2 fax-details">
               Fax (0541) 261 532
           </p>
       </div>
-      <div class="col-lg-2 pl-lg-0 offset-lg-1">
+      <div class="col-lg-2 link-socmed pl-lg-0 offset-lg-1 pt-lg-0 pt-5">
           <a href="#" class="text-gray d-block">
               <i class="fab fa-facebook-square"></i> Ansaf Indonesia
           </a>
@@ -459,16 +670,16 @@
           </a>
       </div>
   </div>
-  </div>
-  <div class="container-fluid footer bg-dark-blue">
-      <div class="row">
-          <div class="col-lg-12">
-              <p class="text-white mt-lg-3 text-center">
-                  Copyright © 2020 PT Ansaf Inti Resources
-              </p>
-          </div>
-      </div>
-  </div>
+</div>
+<div class="container-fluid footer bg-dark-blue">
+    <div class="row">
+        <div class="col-lg-12">
+            <p class="text-white mt-3 text-center">
+                Copyright © 2020 PT Ansaf Inti Resources
+            </p>
+        </div>
+    </div>
+</div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js" integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg==" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
