--- a/business-services.html
+++ b/business-services.html
@@ -21,7 +21,7 @@
             <img class="img-fluid logo" src="images/ansaf-logo.png" alt="">
           </a>
         </div>
-        <div class="col-lg-8 menu-wrap ml-lg-5">
+        <div class="col-lg-8 menu-wrap ml-lg-5 d-none d-lg-block">
           <ul>
             <li>
               <a href="about.html">
@@ -72,7 +72,7 @@
             </li> 
           </ul>
         </div>
-        <div class="col-lg-1 lang-ansaf">
+        <div class="col-lg-1 lang-ansaf d-none d-lg-block">
           <div class="divider"></div>
           <ul>
             <li>
@@ -86,20 +86,20 @@
 </div>
     <div class="container-fluid buss-top">
       <div class="row">
-        <div class="col-lg-12 pl-lg-0">
+        <div class="col-lg-12 pl-0">
           <img class="elements" src="images/segitiga-biru-kanan-04.png" alt="">
           <div class="content-wrapper d-flex">
             <div class="inline-block">
-                <img class="w-auto mt-lg-5" src="images/line-gray-11.png" alt="">
+                <img class="mt-5" src="images/line-gray-11.png" alt="">
             </div>
-            <div class="inline-block pl-lg-4">
+            <div class="inline-block pl-lg-4 pl-2">
                 <h6 class="text-orange">
                   OUR BUSINESSES
                 </h6>
                 <h2 class="text-dark-blue mb-lg-4">
                   Ansaf Services
                 </h2>
-                <a href="businesses.html" class="mt-lg-5 d-inline-block">
+                <a href="businesses.html" class="mt-lg-5 d-none d-lg-inline-block">
                   <i class="fas fa-chevron-left text-orange"></i> kembali ke halaman sebelumnya
                 </a>
             </div>
@@ -110,21 +110,40 @@
     <div class="container-fluid buss-mid position-relative">
       <img class="scope-services move-right" src="images/business-services-scope-content-03.png" alt="">
       <div class="row first-section">
-        <div class="col-lg-6 offset-lg-6">
-          <h6 class="text-orange mb-lg-1">
-            TENTANG BISNIS INI
-          </h6>
-          <h3 class="text-white mb-lg-4">
-            Pertambangan Mineral dan Batubara
-          </h3>
-          <p class="text-white">
-            Semenjak berdirinya di tahun 2014 sebagai perusahaan penyedia jasa<br>
-            pertambangan, Ansaf telah melayani serangkaian layanan kontrak<br>
-            pertambangan diberbagai perusahaan. Kita menangani perencanaan<br>
-            tambang, pengangkutan lapisan tanah penutup, penambangan batu<br>
-            bara, serta pengangkutan batu bara dari lokasi tambang ke pelabuhan<br>
-            serta pekerjaan pengelolaan pasca tambang dan reklamasi. 
-          </p>
+        <div class="col-lg-6 offset-lg-6 pl-lg-3 pl-0">
+          <div class="content-wrapper d-flex">
+            <div class="inline-block d-lg-none">
+              <img class="mt-5" src="images/line-gray-11.png" alt="">
+            </div>
+            <div class="inline-block pl-lg-0 pl-2">
+              <h6 class="text-orange mb-lg-1">
+                TENTANG BISNIS INI
+              </h6>
+              <h3 class="text-white mb-4">
+                Pertambangan Mineral dan Batubara
+              </h3>
+              <p class="text-white d-none d-lg-block">
+                Semenjak berdirinya di tahun 2014 sebagai perusahaan penyedia jasa<br>
+                pertambangan, Ansaf telah melayani serangkaian layanan kontrak<br>
+                pertambangan diberbagai perusahaan. Kita menangani perencanaan<br>
+                tambang, pengangkutan lapisan tanah penutup, penambangan batu<br>
+                bara, serta pengangkutan batu bara dari lokasi tambang ke pelabuhan<br>
+                serta pekerjaan pengelolaan pasca tambang dan reklamasi. 
+              </p>
+              <p class="text-white d-lg-none">
+                Semenjak berdirinya di tahun 2014 sebagai<br>
+                perusahaan penyedia jasa pertambangan,<br>
+                Ansaf telah melayani serangkaian layanan<br>
+                kontrak pertambangan diberbagai perusahaan.<br>
+                Kita menangani perencanaan tambang,<br>
+                pengangkutan lapisan tanah penutup,<br>
+                penambangan batu bara, serta pengangkutan<br>
+                batu bara dari lokasi tambang ke pelabuhan<br>
+                serta pekerjaan pengelolaan pasca tambang<br>
+                dan reklamasi.  
+              </p>
+            </div>
+          </div>
         </div>
       </div>
     </div>
@@ -132,27 +151,34 @@
       <div class="row">
         <div class="col-lg-6">
           <div class="row">
-            <div class="col-lg-12 px-lg-3">
+            <div class="col-lg-12 px-lg-3 pl-0 pr-5">
               <div class="content-wrapper d-flex">
                 <div class="inline-block">
-                    <img class="w-auto mt-lg-3" src="images/line-gray-11.png" alt="">
+                    <img class="mt-3" src="images/line-gray-11.png" alt="">
                 </div>
-                <div class="inline-block pl-lg-4">
+                <div class="inline-block pl-lg-4 pl-2">
                     <h2 class="text-dark-blue mb-lg-4">
                       Kegiatan Usaha
                     </h2>
-                    <p class="text-dark-blue font-roboto">
+                    <p class="text-dark-blue font-roboto d-none d-lg-block">
                       Memulai usahanya sebagai perusahaan yang bergerak di coal trading<br>
                       company. PT Ansaf memiliki beberapa services antara lain: Mining<br>
                       Development, Overburden Removal, Coal Getting, dan Coal Hauling.<br>
+                    </p>
+                    <p class="text-dark-blue font-roboto d-lg-none mt-4 mb-5">
+                      Memulai usahanya sebagai perusahaan yang<br>
+                      bergerak di coal trading company. PT Ansaf<br>
+                      memiliki beberapa services antara lain: Mining<br>
+                      Development, Overburden Removal, Coal<br>
+                      Getting, dan CoalHauling.
                     </p>
                 </div>
               </div>
             </div>
           </div>
-          <div class="row items my-lg-5">
-            <div class="col-lg-12 bg-light-gray p-lg-5">
-              <h3 class="my-lg-5">
+          <div class="row items my-5">
+            <div class="col-lg-12 bg-light-gray p-5">
+              <h3 class="my-5">
                 Image
               </h3>
             </div>
@@ -168,9 +194,9 @@
               </p>
             </div>
           </div>
-          <div class="row items my-lg-5">
-            <div class="col-lg-12 bg-light-gray p-lg-5">
-              <h3 class="my-lg-5">
+          <div class="row items my-5">
+            <div class="col-lg-12 bg-light-gray p-5">
+              <h3 class="my-5">
                 Image
               </h3>
             </div>
@@ -188,8 +214,8 @@
         </div>
         <div class="col-lg-6">
           <div class="row items my-lg-5">
-            <div class="col-lg-12 bg-light-gray p-lg-5">
-              <h3 class="my-lg-5">
+            <div class="col-lg-12 bg-light-gray p-5">
+              <h3 class="my-5">
                 Image
               </h3>
             </div>
@@ -205,9 +231,9 @@
               </p>
             </div>
           </div>
-          <div class="row items my-lg-5">
-            <div class="col-lg-12 bg-light-gray p-lg-5">
-              <h3 class="my-lg-5">
+          <div class="row items my-5">
+            <div class="col-lg-12 bg-light-gray p-5">
+              <h3 class="my-5">
                 Image
               </h3>
             </div>
@@ -228,8 +254,12 @@
     <div class="container-fluid footer-content">
       <div class="row text-center">
           <div class="col-lg-12">
-              <h4 class="text-dark-blue pb-lg-4">
+              <h4 class="text-dark-blue pb-lg-4 d-none d-lg-block">
                 Bisnis Kami Lainnya
+              </h4>
+              <h4 class="text-dark-blue pb-5 d-lg-none">
+                Bisnis Kami<br>
+                Lainnya
               </h4>
           </div>
       </div>
@@ -252,27 +282,27 @@
           </div>
       </div>
   </div>
-  <div class="container-fluid footer-details mb-lg-5">
+  <div class="container-fluid footer-details mb-5">
     <div class="row">
       <div class="col-lg-2">
           <img class="img-fluid text-right logo" src="images/ansaf-logo.png" alt="">
       </div>
-      <div class="col-lg-4">
+      <div class="col-lg-4 py-lg-0 py-4">
           <p class="text-gray">
               Kantor Taman E3.3 Unit B5 Jl Dr Ide Anak<br>
               Agung Gede Agung Lot 8.6-8.7 Kawasan Mega<br>
-              KuninganJakarta 12950
+              Kuningan Jakarta 12950
           </p>
       </div>
       <div class="col-lg-3 fax-column text-center">
           <a href="#" class="link-orange-border">
              <span class="text-orange"><i class="fab fa-whatsapp text-orange"></i> (0541) 260 226</span> 
           </a>
-          <p class="text-gray mt-lg-3">
+          <p class="text-gray mt-lg-3 mt-2 fax-details">
               Fax (0541) 261 532
           </p>
       </div>
-      <div class="col-lg-2 pl-lg-0 offset-lg-1">
+      <div class="col-lg-2 link-socmed pl-lg-0 offset-lg-1 pt-lg-0 pt-5">
           <a href="#" class="text-gray d-block">
               <i class="fab fa-facebook-square"></i> Ansaf Indonesia
           </a>
@@ -283,17 +313,17 @@
               <i class="fab fa-youtube"></i> Ansaf Indonesia
           </a>
       </div>
+  </div>
+</div>
+<div class="container-fluid footer bg-dark-blue">
+    <div class="row">
+        <div class="col-lg-12">
+            <p class="text-white mt-3 text-center">
+                Copyright © 2020 PT Ansaf Inti Resources
+            </p>
+        </div>
     </div>
-  </div>
-  <div class="container-fluid footer bg-dark-blue">
-      <div class="row">
-          <div class="col-lg-12">
-              <p class="text-white mt-lg-3 text-center">
-                  Copyright © 2020 PT Ansaf Inti Resources
-              </p>
-          </div>
-      </div>
-  </div>
+</div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js" integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg==" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
